Mise à jour du portfolio

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -20,7 +20,7 @@
   "myLittleStory": {
     "little": "Some facts ",
     "story": "about me",
-    "sentence1": "Following on my brother's steps, I decided to pursue my studies in cybersecurity.",
+    "sentence1": "Following on my brother's steps, I decided to pursue my studies in IT.",
     "sentence2-1": "After an internship in this field, I changed my mind. From this experience, I realised that I prefer writing code than auditing it. This is when I decided to ",
     "sentence2-2": "dive into the world of development.",
     "sentence3": "I manage to balance my studies between school and work to enter into the professionnal world.",
