--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -20,7 +20,7 @@
   "myLittleStory": {
     "little": "Voici ma petite ",
     "story": "histoire",
-    "sentence1": "Grâce à mon frère, j'ai souhaité travailler dans le monde de la cybersécurité.",
+    "sentence1": "Grâce à mon frère, j'ai souhaité travailler dans le monde de l'informatique.",
     "sentence2-1": "À la suite d'un stage dans ce domaine, je me suis rendu compte qu'écrire du code m'intéressait plus que de le relire. J'ai donc décidé de ",
     "sentence2-2": "découvrir le monde du développement.",
     "sentence3": "Par la suite, j'ai choisi l'alternance afin de mettre un pied dans le monde du travail.",
@@ -57,12 +57,12 @@
     "sentence1-2": "Je m'appelle ",
     "sentence1-3": "Chrislin Mabounda, ",
     "sentence1-4": "et je viens de ",
-    "sentence1-5": "Andeville.",
+    "sentence1-5": "Paris.",
     "sentence2-1": "J'ai ",
     "sentence2-2": "21 ans ",
-    "sentence2-3": "et je suis actuellement en BTS Services Informatiques aux Organisations option Solutions Logicielles et Applications Métiers.",
+    "sentence2-3": "et je suis actuellement en Bachelor Data IA.",
     "sentence4": "J'ai aussi d'autres hobbies que le développement !",
-    "hobbie1": "Jeux - Vidéos",
+    "hobbie1": "Lecture",
     "hobbie2": "Sport",
     "hobbie3": "Musique",
     "hobbie4": "Cinéma",
